--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,13 @@
 body{
     text-align: center;
     margin: 0; 
-    background-color: rgb(201, 220, 238);
+    background-color: rgb(164, 200, 230);
+    position:absolute;
     font-family: 'Silkscreen', cursive;
+}
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
 }
 h1{
 margin: -60px 0 15px 28px;
@@ -12,7 +17,7 @@ font-size: 400%;
 .top-container{
     height: 670px;
     width: auto;
-    background-color: rgb(201, 220, 238);
+    display:block;
 }
 #cloud1{
     position: relative;
@@ -21,8 +26,8 @@ font-size: 400%;
 }
 #cloud2{
     position:relative;
-    top: -260px;
-    left: -170px;
+    top: -300px;
+    left: -250px;
 }
 #moun{
     position:relative;
@@ -32,32 +37,31 @@ font-size: 400%;
 }
 #moun1{
     position:relative;
-    top: -316px;
+    top: -295px;
     right:-890px;
     font-weight: bold;
     z-index: 1;
 }
 #moun2{
     position:relative;
-    top: -465px;
-    right:-401px;
+    top: -463px;
+    right:-380px;
     font-weight: bold;
     z-index: 0;
 }
 #moun3{
     position:relative;
-    top: -677px;
+    top: -655px;
     right:-300px;
     font-weight: bold;
     z-index: 3;
 }
 #moun4{
     position:relative;
-    top: -680px;
+    top: -655px;
     right:0px;
     font-weight: bold;
     z-index: 2;
-
 }
 #wo{
     text-align: center;
@@ -76,34 +80,85 @@ font-size: 400%;
 #dino{
     position:relative;
     left:-400px;
-    top:-1017px;
+    top:-999px;
     height:50%;
 }
 #pfp{
     position:relative;
-    height: 350px;
-    width: 350px;
-    left:-450px;
-    top:62px;
+    height: 450px;
+    width: 450px;
+    left:-400px;
+    top:3px;
     border: 5px solid black;
     border-bottom-left-radius: 50%;
     border-bottom-right-radius: 50%;
     border-top-right-radius: 50%;
     border-top-left-radius: 50%;
+    margin: 5px 5px 5px 5px ;
 }
 #pfp:hover{
-    box-shadow: 0 0 0 5px rgb(163, 104, 202);
-}
-.info{
-    top: -400px;
-    position: relative;
-    font-size: 300%;
-    margin: 0;
+    box-shadow: 0 0 0 20px rgb(195, 172, 211);
 }
 #about{
-    font-size: 300%;
-}
-.profile{
+    font-size: 70px;
+    margin: 0;
+    right: -250px;
     position: relative;
-    height: 700px;
 }
+#hey{
+    width: 400px;
+    top:0px;
+    left:0;
+    position: relative;
+    font-size: 40px;
+    margin: 0;
+}
+.info{
+    color: black;
+    position: relative;
+    top:-450px;
+    left:540px;
+    width: 770px;
+    font-size: 32px;
+    text-align: left;
+    font-family:Arial;
+    font-weight: bold;
+    border: 3px solid crimson;
+    border-top-left-radius:10px;
+    border-top-right-radius:25%;
+    border-bottom-left-radius:10px ;
+    border-bottom-right-radius:25%;
+    padding: 10px;
+    background-color: crimson;
+    box-shadow: 0 0 0 10px rgb(135, 37, 226);
+
+}
+.info:hover{
+    color: rgb(255, 255, 255);
+}
+.middle-container{
+    display:block;
+}
+.skills{
+    position: relative;
+    top:-400px;
+    display: inline-block;
+}
+#hr{
+    position:relative ;
+    top: -394px;
+}
+#skill{
+    font-size: 70px;
+    text-align: center;
+    margin: 0;
+    position: relative;
+} 
+hr{
+    height: 3px;
+    border-bottom: transparent;
+    border-top: 3px dashed red;
+}
+
+
+
